--- a/style.css
+++ b/style.css
@@ -7,12 +7,12 @@
 }
 body {
   font-family: "Outfit", sans-serif;
-  background-color: lightgray;
+  background-color: #F2F2F2;
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   font-size: 15px;
 }
 .container {
