--- a/style.css
+++ b/style.css
@@ -7,24 +7,24 @@
 }
 body {
   font-family: "Outfit", sans-serif;
-  background-color: #F2F2F2;
+  background-color: #D5E1EF;
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100%;
   min-height: 100vh;
-  font-size: 15px;
+  font-size: 1.067rem;
 }
 .container {
   width: 320px;
   background: white;
   border-radius: 20px;
   text-align: center;
-  padding: 16px;
+  padding: 1rem;
 }
 .details {
   width: 288px;
-  padding: 16px 0px 16px 0px;
+  padding: 1rem 0;
 }
 #img-qr {
   width: 288px;
@@ -32,10 +32,10 @@ body {
 }
 .header {
   font-weight: 700px;
-  font-size: 22px;
+  font-size: 1.375rem;
 }
 .text {
   font-weight: 400px;
   color: grey;
-  padding: 16px;
+  padding: 1rem;
 }
