--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
+  width: 100vw;
   min-height: 100vh;
   font-size: 1.067rem;
 }
