--- a/style.css
+++ b/style.css
@@ -24,19 +24,21 @@ body {
   padding: 1rem;
 }
 .details {
+
   width: 288px;
-  padding: 1rem 0;
+  padding: 1em 0;
 }
 #img-qr {
   width: 288px;
   border-radius: 10px;
 }
 .header {
+  font-size: 1.466em;
   font-weight: 700px;
-  font-size: 1.375rem;
 }
 .text {
+  font-size:1em;
   font-weight: 400px;
   color: grey;
-  padding: 1rem;
+  padding: 1em;
 }
